add the necessary requirements for the epic4gtouch

--- a/overlay/packages/apps/CMParts/res/values/config.xml
+++ b/overlay/packages/apps/CMParts/res/values/config.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<bool name="has_led_flash">true</bool>
+  <bool name="has_led_flash">true</bool>
+  <!-- Notification LED has single color only -->
+  <bool name="has_single_notification_led">true</bool>
 </resources>
